Enhance hand comparison